<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#091854"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_stroke"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/login_title"
                android:textColor="#cdcdcd"
                android:textSize="40dp"
                app:fontFamily="@font/faster_one" />
            <EditText
                android:id="@+id/email_login"
                android:layout_below="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_username"
                android:background="@drawable/userpass_stroke"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="15dp"
                android:layout_margin="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                />
            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:background="@drawable/userpass_stroke"
                android:fontFamily="sans-serif"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_below="@+id/email_login"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="15dp"
                android:layout_margin="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:inputType="textWebPassword"
                />
            <Button
                android:id="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_login"
                android:background="@drawable/button_bg"
                android:text="@string/text_login"
                android:textColor="#ffffff"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_margin="20dp"
                />



            <RelativeLayout
                android:id="@+id/linear"
                android:layout_below="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_checkboxId"
                    android:background="@drawable/userpass_stroke"
                    android:layout_below="@+id/login"
                    tools:ignore="NotSibling" />
                <TextView
                    android:id="@+id/login_rememberId"
                    android:text="@string/text_remember"
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/login_checkboxId"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:text="@string/text_forgotPassword"
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />


            </RelativeLayout>
            <Button
                android:id="@+id/signUp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:background="@drawable/button_bg"
                android:text="@string/text_signUp"
                android:textColor="#ff0000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_margin="20dp"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                />

        </RelativeLayout>
    </ScrollView>


    <TextView
        android:layout_below="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="designed by rahul"
        android:layout_alignParentBottom="true"
        android:textColor="#ead72c"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.3"
        />
</RelativeLayout>